src/objects/Penthouse__c.object
<CustomObject>
    <fields>
        <fullName>Apartment__c</fullName>
        <label>Apartment</label>
        <referenceTo>Apartment__c</referenceTo>
        <relationshipLabel>Penthouses</relationshipLabel>
        <relationshipName>Penthouses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Currently_available_number_of_units__c</fullName>
        <label>Currently available number of units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_unit_sold__c</fullName>
        <label>Number of unit sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_units__c</fullName>
        <label>Number of units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_of_flat__c</fullName>
        <formula>Rate_per_Sq_ft__c *  Sq_ft_for_penthouse__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price of flat</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rate_per_Sq_ft__c</fullName>
        <label>Rate per Sq.ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sq_ft_for_penthouse__c</fullName>
        <label>Sq. ft for penthouse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Penthouse</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Penthouse Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Penthouses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>maximum_for_penthouse</fullName>
        <active>true</active>
        <description>maximum for penthouse must need to be lesser than or equal to 6C</description>
        <errorConditionFormula>Price_of_flat__c &gt;60000000</errorConditionFormula>
        <errorMessage>The maximum amount of flat must need to be lesser than 6C</errorMessage>
    </validationRules>
</CustomObject>